# HNAP_VpnTemplate

./: .gitignore  README.md  settings.gradle.kts  template.ovpn
app/: build.gradle.kts
app/src/main/debug/: AndroidManifest.xml  proguard-rules.pro
app/src/main/debug/assets/anim/: rate.json
app/src/main/debug/cpp/: CMakeLists.txt  stools.cpp
app/src/main/debug/java/com/template/vpn/: Constants.java  GameStatusView.java  Glog.java  SdkHelper.java  SecureTools.java
app/src/main/debug/res/layout/: view_test.xml
buildSrc/src/main/kotlin/com/deploy/plugin/: DeployAdapter.kt  DeployExtension.kt  DeployLoader.kt  DeployPlugin.kt
gradle/wrapper/: gradle-wrapper.properties
libconfig/: build.gradle.kts
libconfig/src/main/debug/: AndroidManifest.xml
libconfig/src/main/debug/java/com/template/config/: LibConfig.java
